# BattleNetworkData

./: MANIFEST.in  json_helper.py  pyproject.toml
src/mmbn/gamedata/: chip.py  chip_list.py  chip_list_utils.py  navicust_part.py  ncp_list.py  ncp_list_utils.py
src/mmbn/gamedata/bn1/: bn1_chip.py  chips.json
src/mmbn/gamedata/bn1/data/: chips.json  untradable.json
src/mmbn/gamedata/bn2/: bn2_chip.py  chips.json
src/mmbn/gamedata/bn2/data/: chips.json
src/mmbn/gamedata/bn3/: bn3_chip.py  bn3_chip_list.py  bn3_ncp_list.py  ncp_bugs.py
src/mmbn/gamedata/bn3/data/: chips.json  gigachips.json  illegal.json  illegal_navicust.json  megachips.json  navicust.json  untradable.json  untradable_navicust.json
src/mmbn/gamedata/bn4/: bn4_chip.py  chips.json  gigachips.json  megachips.json  ncp_bugs.py
src/mmbn/gamedata/bn4/data/: chips.json  darkchips.json  gigachips.json  megachips.json  navicust.json  secret_megachips.json  secretchips.json  untradable.json  untradable_navicust.json
src/mmbn/gamedata/bn5/: bn5_chip.py  chips.json  darkchips.json  gigachips.json  megachips.json  ncp_bugs.py
src/mmbn/gamedata/bn5/data/: chips.json  darkchips.json  gigachips.json  megachips.json  navicust.json  secret_megachips.json  unobtainable.json  unobtainable_navicust.json  untradable.json
src/mmbn/gamedata/bn6/: bn6_chip.py  bn6_chip_list.py  bn6_ncp_list.py  ncp_bugs.py
src/mmbn/gamedata/bn6/data/: chips.json  megachips.json  navicust.json  untradable.json
tests/: test_bn3_gamedata.py  test_bn4_gamedata.py  test_bn5_gamedata.py  test_bn6_gamedata.py
